se modifico la ruta del sw

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Twittor Jan",
-    "name": "Twittor para héroes Jan",
+    "short_name": "Twittor",
+    "name": "Twittor para héroes",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
